--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ plugins {
 }
 
 group 'com.shu'
-version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -17,6 +16,12 @@ application {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
     testCompile "org.assertj:assertj-core:3.11.1"
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.shu.Main'
+    }
 }
 
 test {
